--- a/01_Covid19.ipynb
+++ b/01_Covid19.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "01_Covid19.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpAC1RvzSQi8WoO9sMro/a",
+      "authorship_tag": "ABX9TyP3iPPI/wGtgjlpHk4BDBCn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,10 +27,14 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GzLHpMmVbHDa",
+        "id": "IjMRs1VgDd-n",
         "colab_type": "text"
       },
       "source": [
+        "# Association Rule Learning\n",
+        "\n",
+        "Simple learning of Covid-19 symptoms that occur together.  \n",
+        "  \n",
         "Note :  \n",
         "The dataset I use in this learning is part of https://www.kaggle.com/bitsofishan/covid19-patient-symptoms ' dataset.  \n",
         "I choose only the record that the corona result is 1."
@@ -141,7 +145,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 507
+          "height": 453
         },
         "outputId": "f263aa8f-cb5c-427d-a56f-6cb2048d2350"
       },
@@ -469,13 +473,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "IjMRs1VgDd-n",
+        "id": "iPAcOPfT5gSH",
         "colab_type": "text"
       },
       "source": [
-        "# Association Rule Learning\n",
-        "\n",
-        "Simple learning of Covid-19 symptoms that occur together."
+        "# Apriori model"
       ]
     },
     {
