add ! pip install apyori instead of apyori.py file

--- a/01_Covid19.ipynb
+++ b/01_Covid19.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "01_Covid19.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP3iPPI/wGtgjlpHk4BDBCn",
+      "authorship_tag": "ABX9TyMzkVS9otzEbjpsAc+Bs9qH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -479,6 +479,19 @@
       "source": [
         "# Apriori model"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jkQy-X2kY_Na",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "! pip install apyori"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
